# vsdf

./: .gitignore  CMakeLists.txt  FFMPEG_PLAN.md  LICENSE  Makefile  PLAN_offline_ring.md  QUICKSTART.md  README.md  SHELL_INTEGRATION.md  default.nix  flake.nix  fuzz.cpp  fuzz_shader.cpp  linux-tests.Dockerfile
.github/workflows/: build.yml  ci.yml  fuzzing-sanitizers.yml  linux-docker-ci.yml  linux-docker-macos-ci.yml  linux-smoke-tests.yml  macos-ci.yml  nix-flake-ci.yml  nix-flake-test.yml  release.yml  sanitizers.yml  smoketest.yml  test.yml  windows-build-test.yml  windows-smoketest.yml  windows-test.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_fuzz/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  fuzz_shader
build_san/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_san/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vsdf_tests[1]_include.cmake  vsdf_tests[1]_tests.cmake
build_san/tests/filewatcher/: CTestTestfile.cmake  Makefile  cmake_install.cmake  filewatcher_tests  filewatcher_tests[1]_include.cmake  filewatcher_tests[1]_tests.cmake
docs/: offline_renderer_plan.md
fuzz_corpus/: malformed_shader.frag  simple_shader.frag
include/: ffmpeg_encode_settings.h  ffmpeg_encoder.h  ffmpeg_utils.h  fileutils.h  frame.h  glfwutils.h  image_dump.h  offline_sdf_renderer.h  offline_sdf_utils.h  online_sdf_renderer.h  readback_frame.h  sdf_renderer.h  shader_templates.h  shader_utils.h  vkutils.h
include/filewatcher/: filewatcher.h  filewatcher_factory.h  inotify_utils.h  linux_filewatcher.h  mac_filewatcher.h  windows_filewatcher.h
scripts/: build.sh  build_ffmpeg_min.ps1  build_ffmpeg_min.sh  build_quiet.sh  build_sanitizers.sh  bundle_linux_docker.sh  bundle_macos.sh  fetch_ffmpeg_src.ps1  fetch_ffmpeg_src.sh  run_fuzzer.sh  test.sh
shaders/: debug_quadrants.frag  fullscreenquad.vert  testtoyshader.frag  toytemplate.frag  vulktemplate.frag
shell/bash/: vsdf-toy.sh
shell/fish/: vsdf-toy.fish
shell/zsh/: vsdf-toy.sh
src/: ffmpeg_encoder.cpp  ffmpeg_utils.cpp  image_dump.cpp  main.cpp  offline_sdf_renderer.cpp  online_sdf_renderer.cpp  sdf_renderer.cpp  shader_utils.cpp
src/filewatcher/: linux_filewatcher.cpp  mac_filewatcher.cpp  windows_filewatcher.cpp
tests/: CMakeLists.txt  ffmpeg_test_utils.h  ppm_utils.h  test_ffmpeg.cpp  test_ffmpeg_encode.cpp  test_ffmpeg_encoder.cpp  test_frame.cpp  test_offline_ffmpeg_encode.cpp  test_offline_ppm_dump.cpp  test_offline_utils.cpp  test_online_ppm_dump.cpp  test_ppm_dump.cpp  test_shader_comp.cpp  test_utils.h
tests/filewatcher/: CMakeLists.txt  test_filewatcher.cpp
